update instructions on accessing shared datasets

--- a/_posts/2022-05-12-nhl-api.md
+++ b/_posts/2022-05-12-nhl-api.md
@@ -54,6 +54,7 @@ Root[NHL Stats API] --> Divisions[Divisions]
 Root[NHL Stats API] -->|Year| Draft[Draft]
 Seasons[Seasons] -->|Season| Schedule[Schedule]
 Seasons[Seasons] --> |Season| Teams[Teams]
+Schedule[Schedule] -->|Game PK| Shifts[Shifts]
 Schedule[Schedule] -->|Game PK| Game[Game]
 Game[Game] -->|Game PK| Plays[Live Feed Plays]
 Game[Game] -->|Game PK| Linescore[Live Feed Linescore]
@@ -82,18 +83,19 @@ Resources
 
 Consider this section separate from the rest. Each question that we decide to answer of our newly modeled data will live in this bucket. For example, one of the projects that spawned from this was the [nhl-xg project](https://github.com/the-data-base/nhl-xg)
 
-## Setup
+## How to access our datasets
 ---
-TBD..
 
+If you would like to access our BigQuery datasets for your own analytical use, please reach out via [Slack](https://join.slack.com/t/the-data-base/shared_invite/zt-1l1bz0ttd-7vILIdXUDSAPlw1KZ~zlRw)!
 
-## Resources
----
-- Learn more about dbt [in the docs](https://docs.getdbt.com/docs/introduction)
-- Check out [Discourse](https://discourse.getdbt.com/) for commonly asked questions and answers
-- Join the [chat](https://community.getdbt.com/) on Slack for live discussions and support
-- Find [dbt events](https://events.getdbt.com) near you
-- Check out [the blog](https://blog.getdbt.com/) for the latest news on dbt's development and best practices
+Please note that you'll be required to sign up for [Google Cloud Platform](https://console.cloud.google.com/) in order to run queries against our dataset from within your own project.
+
+To access the shared datasets, our project admins will add your Google account to our dataset as the role `BigQuery Data Viewer`.
+
+Then, within your *own* BigQuery console, click `+ Add Data` at the top of the Explorer navigation pane, then `Star a project by name` and type in the name `nhl-breakouts`. You will then see the newly starred project and the datasets to which you have been granted view access.
+
+Happy modeling!
+
 
 ## Developer contact
 ---
